--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@ionic-native/speech-recognition": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/text-to-speech": "^4.3.2",
     "@ionic/storage": "2.0.1",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-speechrecognition": "^1.1.2",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-tts": "^0.2.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -50,7 +52,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-tts": {}
     },
     "platforms": [
       "android"
